Adressing review comments